fix card logo/contents draw order without using z-index

--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -49,11 +49,16 @@
 		background-repeat: no-repeat;
 	}
 
-	> .account-name-container {
+	> .card-contents {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+	}
+
+	> .card-contents > .account-name-container {
 		display: flex;
 		align-items: center;
 		margin: 15px 12px 6px 17px;
-		z-index: 2;
 
 		> .name {
 			color: #FFF;
@@ -88,11 +93,7 @@
 		}
 	}
 
-	> .account-balances {
-		z-index: 2;
-	}
-
-	> .account-balances > .balance-container {
+	> .card-contents > .account-balances > .balance-container {
 		display: flex;
 		align-items: flex-end;
 		margin: 0 12px 20px 17px;
